Added services, audio, registries
Added:
- Engine services interfaces
- WebviewAudio
- inview mothod decorator
- custom registries

--- a/engine/index.html
+++ b/engine/index.html
@@ -30,7 +30,7 @@
             function startGame() {
                 $("#main_menu").toggleClass("hidden");
                 $("#game").toggleClass("hidden");
-                console.log("game started");
+                runEvent("globalEvent", "gameStarted");
             }
         </script>
         
