--- a/engine/index.html
+++ b/engine/index.html
@@ -30,7 +30,7 @@
             function startGame() {
                 $("#main_menu").toggleClass("hidden");
                 $("#game").toggleClass("hidden");
-                runEvent("globalEvent", "gameStarted");
+                runEvent("globalEvent", { event: "gameStarted"});
             }
         </script>
         
@@ -144,6 +144,7 @@
         };
 
         function sendMessage(message) {
+            console.log("WS Message send:", message)
             ws.send(JSON.stringify(message))
         }
 
@@ -155,8 +156,26 @@
             const data = JSON.parse(message.data);
             switch (data.event) {
                 case "eval":
+                    console.log(data.script)
                     eval(data.script);
             }
         }
+
+        document.addEventListener("keydown", e => {
+            // console.log("Key down", e)
+            runEvent("globalEvent", {
+                event: "keyboardEvent",
+                type: "keyDown",
+                key: e.key
+            })
+        })
+
+        document.addEventListener("keyup", e => {
+            runEvent("globalEvent", {
+                event: "keyboardEvent",
+                type: "keyUp",
+                key: e.key
+            })
+        })
         </script>
 </html>
